--- a/test/test.html
+++ b/test/test.html
@@ -4,6 +4,10 @@
 <title>kalman.js Test Suite</title>
 <script type="text/javascript" src="sylvester.src.js"></script>
 <script type="text/javascript" src="../kalman.js"></script>
+
+<script type="text/javascript">
+
+</script>
 </head>
 
 <body>
