removing the Matrix injection.

--- a/test/test.html
+++ b/test/test.html
@@ -20,7 +20,7 @@ var KO = new KalmanObservation(z_k,H_k,R_k);
 for (var i=0;i<200;i++){
   z_k = $V([0.5+Math.random()]);
   KO.z_k=z_k;
-  KM.update(KO, Matrix);
+  KM.update(KO);
   console.log(KM.x_k.elements);
 }
 
